k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    kubernetes.io/tls-acme: 'true'
    acme.cert-manager.io/http01-edit-in-place: "true"
  name: nginx01
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: launchpencil.f5.si
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx01
            port:
              number: 80
  - host: zikanwari.f5.si
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zikanwari
            port:
              number: 80
  - host: cloud.launchpencil.f5.si
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud
            port:
              number: 80
